[package]
name = "dashboard"
authors = ["Frank Lyaruu <flyaruu@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hal = { package = "esp32s3-hal", version = "0.13.0", features = [
    "async",
    "embassy",
    "rt",
    "embassy-time-timg0",
] }
esp-backtrace = { version = "0.9.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32s3","log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { version = "0.1.1", features = ["esp32s3", "wifi","embassy-net", "async","phy-enable-usb","esp-now"] }

smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embassy-net-driver = "0.2.0"

embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }
embedded-graphics = { version = "0.8.1" }
embassy-time = "0.1.5"
embassy-net = { version = "0.2.1", features = ["nightly","medium-ip", "tcp", "medium-ethernet", "dhcpv4", "log", "udp","dns"] }

embedded-io-async = "0.6.0"
static_cell = { version = "=1.2.0", features = ["nightly"] }
embassy-executor = { version = "=0.3.2", features = ["arch-xtensa", "nightly", "executor-thread", "integrated-timers"] }
embassy-macros = "0.2.1"

t-display-s3-amoled = { path = "../../t-display-s3-amoled-rs" }
embassy-sync = "0.5.0"
serde = { version = "1.0.193", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }
picoserve = "0.3.0"
protocol = {path="../rc-car/protocol" }
